# NEAT-GRU

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  Timer.cpp  Timer.h  build.rs  build_wasm.sh  doc.conf  setup.py  topology_test.json
GPU/: CMakeLists.txt  ComputeInstance.cuh  Connection.cu  Connection.cuh  CudaGene.cuh  CudaPhenotype.cuh  Layer.cu  Layer.cuh  NN.cu  NN.cuh  Neuron.cu  Neuron.cuh
Game/: Game.cpp  Game.h  Player.cpp  Player.h
NeuralNetwork/: Connection.h  ConnectionGru.h  ConnectionSigmoid.h  NN.cpp  NN.cu  NN.cuh  NN.h  Neuron.h  Topology.cpp  Topology.h
Private/: Bias.h  Connection.cpp  Connection.cu  Connection.cuh  Connection.h  ConnectionType.h  CudaPhenotype.cuh  Gene.cpp  Gene.h  Generation.cpp  Generation.h  Layer.cpp  Layer.cu  Layer.cuh  Layer.h  Mutation.cpp  Mutation.h  MutationField.cpp  MutationField.h  Neuron.cpp  Neuron.cu  Neuron.cuh  Neuron.h  Phenotype.cpp  Phenotype.h  Random.cpp  Random.h  Species.cpp  Species.h  routines.cpp  routines.h  xmm_union.h
Private/CUDA/: Connection.cu  Connection.cuh  NN.cu  NN.h  Neuron.cu  Neuron.cuh  routines.cu  routines.cuh
Serializer/: Serializable.cpp  Serializable.h  Serializer.hpp
Threading/: ThreadPool.cpp  ThreadPool.h  multithreaded_methods.h
TopologyParser/: TopologyParser.cpp  TopologyParser.h
Train/: Train.cpp  Train.h  static.h
bindings/: GameBinding.cpp  GameBinding.h  bindings.cpp  bindings.h  python.cpp  python.h  structs.h
rust/: ffi.rs  game.rs  lib.rs  neural_network.rs  tests.rs  topology.rs
src/: dim.rs  ffi.rs  gpu_compute_instance.rs  lib.rs  neural_network.rs  tests.rs  topology.rs  train.rs
tests/: CMakeLists.txt  Memory.cpp  Memory.h  MemoryGrid.cpp  MemoryGrid.h  MemoryPlayer.cpp  MemoryPlayer.h  constants.h  test_main.cpp  test_routines.cpp
tests/MemoryGame/: Memory.cpp  Memory.h  MemoryGrid.cpp  MemoryGrid.h  MemoryPlayer.cpp  MemoryPlayer.h  constants.h  test_main.cpp
tests/TrendGame/: TrendGame.cpp  TrendGame.h  test_main.cpp
tests/gpu/: GpuGame.cpp  GpuGame.h  gpu_main.cpp
