[package]
name = "neat-gru"
version = "0.1.8"
authors = ["sakex <alexandre@senges.ch>"]
edition = "2018"
description = "NEAT algorithm with GRU gates"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust/lib.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.68"


[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
gpu = [] # feature has no explicit dependencies


[profile.release]
# Link time optimisation, possibly even with C++, equivalent to G++'s -flto
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Prevent inserting panic handlers in ASM
panic = "abort"

# Optimisation level, equivalent to G++'s -O3
opt-level = 3

[target.'cfg(target_arch = "wasm32")'.profile.release]
lto = false
